--- a/style/_language-switch.scss
+++ b/style/_language-switch.scss
@@ -29,7 +29,7 @@
 
             &.current-lang {
                 a {
-                    font-family: 'GT Haptik Bold', sans-serif;
+                    font-family: 'GT-Haptik-Bold', sans-serif;
                 }
             }
 
