--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -102,7 +102,7 @@ nav {
             li {
                 &.current-menu-item {
                     a {
-                        font-family: 'GT Haptik Bold', sans-serif;
+                        font-family: 'GT-Haptik-Bold', sans-serif;
                     }
                 }
             }
