--- a/style/_variables.scss
+++ b/style/_variables.scss
@@ -12,7 +12,7 @@ $contrast-secondary-color: #fff;
 $text-color: $brand-primary-color;
 $transition-time: .5s;
 $border-weight: 2px;
-$base-font: 'GT Haptik',
+$base-font: 'GT-Haptik-Regular',
 sans-serif;
 
 // Font Sizes
