--- a/style/_entry-header.scss
+++ b/style/_entry-header.scss
@@ -58,7 +58,7 @@ body.page-child {
             display: block;
             width: 100%;
             color: $brand-secondary-color;
-            font-family: 'GT Haptik Bold', sans-serif;
+            font-family: 'GT-Haptik-Bold', sans-serif;
             font-weight: bold;
         }
     }
