--- a/style/style.scss
+++ b/style/style.scss
@@ -82,7 +82,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'GT Haptik Regular', sans-serif;
+    font-family: 'GT-Haptik-Regular', sans-serif;
     font-weight: normal;
 }
 
