Adding forms styles back in

--- a/style/_boxes.scss
+++ b/style/_boxes.scss
@@ -5,7 +5,7 @@
 */
 
 .backgroundbox {
-    background: $brand-secondary-color;
+    background: $brand-turquoise-color;
     position: absolute;
     z-index: -1;
 }
