--- a/style/style.scss
+++ b/style/style.scss
@@ -12,6 +12,8 @@
 @import "./page-elevator";
 @import "./content";
 @import "./category";
+@import "./calendar";
+@import "./forms";
 
 *,
 *::before,
