--- a/style/_content.scss
+++ b/style/_content.scss
@@ -8,13 +8,13 @@
 .sidebar_note h1,
 h2 {
     font-family: 'GT-Haptik-Bold', sans-serif;
-    font-size: $font-size-large;
+    font-size: $font-size-35;
     margin: 1.6rem 0;
 }
 
 h3 {
     font-family: 'GT-Haptik-Bold', sans-serif;
-    font-size: $font-size-regular;
+    font-size: $font-size-18;
     margin: 1rem 0;
 }
 
@@ -22,7 +22,7 @@ h4,
 h5,
 h6 {
     font-family: 'GT-Haptik-Regular', sans-serif;
-    font-size: $font-size-regular;
+    font-size: $font-size-18;
     margin: .8rem 0;
 }
 
@@ -67,7 +67,7 @@ h6 {
             &__link {
                 background: none;
                 padding: 0;
-                font-size: $font-size-regular;
+                font-size: $font-size-18;
                 color: $brand-secondary-color;
 
                 &:hover {
@@ -115,7 +115,7 @@ h6 {
                         position: relative;
                         background: none;
                         color: $brand-primary-color;
-                        font-size: $font-size-regular;
+                        font-size: $font-size-18;
                         font-family: 'GT-Haptik-Italic', sans-serif;
                         text-align: left;
                         padding: 0;
@@ -152,6 +152,8 @@ h6 {
         .wp-block-separator {
             border-width: $border-weight_m;
             border-bottom: 0;
+            border-left: 0;
+            border-right: 0;
             border-style: solid;
 
             &.has-purple-background-color {
@@ -186,19 +188,19 @@ h6 {
     .content h1,
     .sidebar_note h1,
     h2 {
-        font-size: $font-size-headline-small;
+        font-size: $font-size-headline-50;
         margin: 2rem 0;
     }
 
     h3 {
-        font-size: $font-size-big;
+        font-size: $font-size-25;
         margin: 1.4rem 0;
     }
 
     h4,
     h5,
     h6 {
-        font-size: $font-size-big;
+        font-size: $font-size-25;
         margin: 1.2rem 0;
     }
 
@@ -228,8 +230,6 @@ h6 {
             }
         }
 
-
-
         .content_sidebar-note {
             display: none;
         }
@@ -243,7 +243,7 @@ h6 {
             // Gallery
             figure.wp-block-gallery li.blocks-gallery-item figure {
                 figcaption {
-                    font-size: $font-size-big;
+                    font-size: $font-size-25;
                 }
             }
         }
